add new docuentation swagger and api for detail user
